--- a/style.css
+++ b/style.css
@@ -34,3 +34,13 @@
 	width: 15%;
 	height: 28%;
 }
+.carousel-caption h1{
+      margin: 0;
+      padding: 0;
+      font-size: 4vw;
+}
+.carousel-caption h3{
+      margin: 0;
+      padding: 0;
+      font-size: 3vw;
+}
